# GameServerlist

./: .gitignore  README.md  admincli.py  cli.py  logging.txt  main.py  maincli.py  pyproject.toml
application/: APIRoutes.py  AdminRoutes.py  Config.py  ErrorHandler.py  Forms.py  MCRoutes.py  Models.py  Program.py  Search.py  SendVote.py  Setup.py  Util.py
application/admin/: AdminRoutes.py
application/data/: 13.json  2.json  6.json  7.json
application/static/: robots.txt  sitemap.xml
application/static/css/: account.css  background.css  editServer.css  form.css  guides.css  main.css  myServers.css  notallowed.css  post.css  report.css  review.css  search.css  searchtagsinput.css  tags.css  tagsinput.css  viewserver.css  vote.css
application/static/js/: lazy-load.js
application/static/json/: datapacks.json  mods.json  plugins.json  tags.json
application/static/json/graphs/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  2.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  (+64 more)
application/templates/: index.html  notify.html
application/templates/admin/: base.html  index.html  pinterest-0cb36.html  profile.html  report.html  review.html  reviewTags.html  reviews.html  viewTags.html
application/templates/email/: base_email.html  change_email.html  change_email.txt  confirm_email.html  confirm_email.txt  download_data.html  download_data.txt  remember_username.html  remember_username.txt  reset_password.html  reset_password.txt  server_approved.html  server_approved.txt  server_denied.html  server_denied.txt  server_notify.html  server_notify.txt
application/templates/mc/: account.html  addServer.html  base.html  deleteServer.html  deleteaccount.html  editServer.html  emailconfirm.html  error.html  forgotpassword.html  forgotusername.html  guides.html  index.html  login.html  myServers.html  nologinaddserver.html  notallowed.html  pay.html  post.html  privacy.html  register.html  reportserver.html  resetpassword.html  searchbar.html  tags.html  terms.html  viewserver.html  voteserver.html  votifiertest.html
certs/: cert.pem  key.pem
(+1 files in other folders)
