[tool.poetry]
name = "serverlist"
version = "0.1.0"
description = ""
authors = ["jiak1 <jackdonaldson005@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask-wtf = "^0.14.3"
alembic = "^1.4"
flask-migrate = "^2.5"
sqlalchemy = "^1.3"
arrow = "^0.15.5"
elasticsearch = "^7.6"
rsa = "^4.0"
safe = "^0.4.0"
wtforms = "^2.3"
flask-login = "^0.5.0"
flask-sqlalchemy = "^2.4"
jwt = "^1.0"
requests-aws4auth = "^0.9.0"
Flask-Mail = "^0.9.1"
flask-crontab = "^0.1.2"
oauthlib = "^3.1"
email-validator = "^1.1"
setuptools = "^46.1"
PyMySQL = "^0.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
