[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["jiak1 <jackdonaldson005@gmail.com>"]
description = ""
name = "serverlist"
version = "0.1.0"
[tool.poetry.dependencies]
Flask-Mail = "^0.9.1"
PyMySQL = "^0.9.3"
alembic = "^1.4"
arrow = "^0.15.5"
elasticsearch = "^7.6"
email-validator = "^1.1"
flask-crontab = "^0.1.2"
flask-login = "^0.5.0"
flask-migrate = "^2.5"
flask-sqlalchemy = "^2.4"
flask-wtf = "^0.14.3"
jwt = "^1.0"
mcstatus = "^3.1"
oauthlib = "^3.1"
python = "^3.8"
requests-aws4auth = "^0.9.0"
rsa = "^4.0"
safe = "^0.4.0"
sentry-sdk = "^0.14.3"
setuptools = "^46.1"
sqlalchemy = "^1.3"
wtforms = "^2.3"
[tool.poetry.dev-dependencies]
